# file-mod-tracker

./: .gitattributes  README.md  fsfilter-rs_notes.md  index.html  jest.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: main.yml
installer/: complete_driver_install.cmd  gatorsec.iss
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/drivers/: installpart1.cmd  installpart2.cmd  snFilter.cer  snFilter.inf  snFilter.sys  snfilter.cat
src-tauri/src/: archived_console_only_v1.rs  console_only.rs  file_monitor.rs  kill_process.rs  main.rs  registry_monitor.rs  registry_monitor_prototype.rs  tests.rs  wmi_manager.rs
src-tauri/src/fsfilter_rs/: driver_comm.rs  fsfilter-rs_notes.md  lib.rs  mod.rs  shared_def.rs
src-tauri/windows/fragments/: drivers.wxs
src/components/: Breadcrumbs.tsx  ChangesChart.tsx  CustomCell.tsx  CustomCheckbox.tsx  DashboardStats.tsx  DataTableComponent.tsx  DetectionsChart.tsx  DirectoryCard.tsx  ExampleAccordion.tsx  ExportButton.tsx  FileSystemSettings.tsx  GeneralSettings.tsx  InsertRow.tsx  Investigate.tsx  JsonViewer.tsx  LogsTable.tsx  MUITable.tsx  ModalTable.tsx  NavigationContext.tsx  NewStatsCards.tsx  RegistryCard.tsx  RegistryMUITable.tsx  RegistrySettings.tsx  Sidebar.tsx  Tabs.tsx  useNavigation.tsx
src/components/__tests__/: DashboardStats.test.tsx
src/components/dashboard/: ActivityStatsCard.tsx  MonitoredPathsCard.tsx  RecentActivityFeed.tsx  SystemStatusCard.tsx
src/components/icons/: CSVIcon.tsx  ExportIcon.tsx  JSONIcon.tsx  SQLIcon.tsx  SortIcon.tsx  TXTIcon.tsx
src/contexts/: BreadcrumbContext.tsx  FileMonitorContext.tsx  NavigationContext.tsx  RegistryMonitorContext.tsx  SettingsContext.tsx
src/data/: dashboardData.ts  logsData.ts
src/hooks/: monitor.ts  registry-monitor.ts  useDropdown.ts  useFileMonitor.ts  useLocalStorage.ts  usePagination.ts  useRegistryMonitor.ts  useSearch.ts
src/pages/: Dashboard.tsx  Detections.tsx  Directories.tsx  Logs.tsx  Saved.tsx  Settings.tsx
src/utils/: Logger.tsx  actions.ts  areDataEqual.ts  constants.ts  convertMonitorStateToTableData.ts  dataTableUtils.ts  export.ts  exportFunctions.ts  parseBackendData.ts  tableConfig.ts  tableStyles.ts  theme.ts  types.ts
