[package]
name = "file-mod-tracker"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "fs-all", "shell-open"] }
notify = "5.0"
winapi = { version = "0.3", features = ["fileapi", "winnt", "minwinbase"] }
chrono = "0.4"
regex = "1.11.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
