[package]
name = "GatorSec"
version = "0.0.1"
description = "GatorSec | Real-Time File and Registry Modification Tracking"
authors = ["Geoffrey Clark, Moshe Singerman, Shahbozbek Hakimov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "1", features = [ "process-all", "shell-sidecar", "shell-execute", "shell-open", "path-all", "window-center", "dialog-open", "fs-all"] }
notify = "5.0"
winapi = { version = "0.3", features = ["fileapi", "winnt", "minwinbase", "psapi", "processthreadsapi", "handleapi", "shellapi", "shobjidl", "winuser", "winbase"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
winreg = "0.10"
env_logger = "0.9"
dirs = "5.0"

# fsfilter-rs dependencies
sysinfo = "0.28.0"
widestring = "1.0.1"
serde = { version = "1.0.130", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2.14"
wchar = "0.11.0"
scopeguard = "1.1.0"
windows = { version = "0.44.0", features = [
    "Win32_Storage_InstallableFileSystems",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Ole",
    "implement"
] }
wmi = "0.7"
once_cell = "1.17"
tokio = { version = "1.28", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
